home page rewording

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: About
+title: Home
 ---
 <div class="container-fluid">
     <div class="row mb-4">
@@ -25,7 +25,7 @@ title: About
                         <p>
                             Since earning my PhD in computer science I've worked in industrial research, SMBs,
                             freelancing, professional services firms, and academia. I have contributed to multiple
-                            early-stage startups and co-founded three of my own, one of which was acquired in 2022. I’ve
+                            early-stage startups and co-founded three of my own, one of which was acquired in 2022. I've
                             been programming computers for three decades, from BBS doors to compilers and parallel file
                             systems.
                         </p>
@@ -57,16 +57,16 @@ title: About
                 <h4 class="card-title text-center">What I do</h4>
                 <div class="card-body">
                     <p>
-                        <b>Analyze.</b> I enjoy helping people diagnose stubborn technical problems. When asked, I can provide thoughtful and succinct analysis in presentations and writing.
+                        <b>Analyze.</b> I enjoy helping people diagnose stubborn technical problems, and can provide thoughtful and succinct analysis in presentations and writing.
                     </p>
                     <p>
-                        <b>Execute.</b> I’m often asked to lead high-risk, high-reward, strategic projects. I can rapidly implement prototypes to get feedback from users. I understand that the prototype often becomes the product, and aim for an appropriate compromise between speed and quality.
+                        <b>Execute.</b> I'm frequently asked to lead high-risk, high-reward, strategic projects that require rapid prototype implementation in order to get feedback from users. The prototype tends to become the product, so I aim for an appropriate compromise between speed and quality.
                     </p>
                     <p>
-                        <b>Guide.</b> I can be a sounding board for new ideas, and offer a broad, alternative perspective on both technical and non-technical concerns. I deeply enjoy mentoring people one-on-one, and strive to empower them to move beyond me. I am able to ask questions in an empathetic way, and take my ego out of the equation.
+                        <b>Guide.</b> It's fun to be a sounding board for new ideas. I can offer a broad, alternative perspective on both technical and non-technical concerns. I'm able to ask questions in an empathetic way and take my ego out of the equation. When the opportunity arises, I deeply enjoy mentoring people one-on-one, and empowering them to move beyond me.
                     </p>
                     <p>
-                        <b>Translate.</b> I strive to understand the needs and concerns of clients and customers, ideally by interacting directly with them. Instead of insisting that users speak the language of software, I am eager to learn how they talk about the challenges they face. I’m able to translate between that language and software requirements.
+                        <b>Translate.</b> I am eager to understand the needs and concerns of clients and customers, ideally by interacting directly with them. Instead of insisting that users speak the language of software, I learn how they talk about the challenges they face, and how to translate between that language and software requirements.
                     </p>
                 </div>
             </div>
@@ -81,28 +81,28 @@ title: About
                 <h6 class="card-subtitle text-center">in my professional life, and the people I work with</h6>
                 <div class="card-body">
                     <p>
-                    <b>Communication.</b> I believe the ability to communicate well – with words, images, dress, body language, and other means – is essential to success as a technologist. Code is a medium, too: "Programs must be written for people to read, and only incidentally for machines to execute." (Abelson)
+                    <b>Communication.</b> The ability to communicate well – with words, images, dress, body language, and other means – is essential to success as a technologist. Code is a medium, too: "Programs must be written for people to read, and only incidentally for machines to execute." (Abelson)
                     <p/>
                     <p>
-                    <b>Creativity.</b> I’m drawn to problems that have ambiguous requirements, non-obvious solutions, and visible impact. I enjoy thinking laterally and drawing on the breadth of my knowledge and experience.
+                    <b>Creativity.</b> I gravitate towards problems that have ambiguous requirements, non-obvious solutions, and visible impact. I enjoy thinking laterally and drawing on the breadth of my knowledge and experience.
                     <p/>
                     <p>
-                    <b>Determination.</b> I love working with people who are hungry for growth and continual improvement, don’t shy away from hard problems, and see failure as an opportunity to learn.
+                    <b>Determination.</b> My favorite professional experiences have involved working with people who are hungry for growth and continual improvement, don't shy away from hard problems, and see failure as an opportunity to learn.
                     <p/>
                     <p>
-                    <b>Emotional intelligence.</b> It’s possible to get by in the IT industry on technical skill alone, but it’s not very effective. Interpersonal skills have a way of amplifying your impact – working on teams, serving clients and users – while a lack of those skills undermines your potential.
+                    <b>Emotional intelligence.</b> It's possible to get by in the IT industry on technical skill alone, but it's not very effective. Interpersonal skills have a way of amplifying your impact – working on teams, serving clients and users – while a lack of those skills undermines your potential.
                     <p/>
                     <p>
-                    <b>Humility.</b> Throughout my life I’ve sought out teachers, mentors, and colleagues whose knowledge, skill, and talent were a stark reminder that there is always room for improvement. Whenever I started to feel like a big fish in the pond, I knew it was time to find a bigger pond. Eventually I learned enough to recognize the depths of my own ignorance.
+                    <b>Humility.</b> Throughout my life I've sought out teachers, mentors, and colleagues whose knowledge, skill, and talent were a stark reminder that there is always room for improvement. Whenever I started to feel like a big fish in the pond, I knew it was time to find a bigger pond.
                     <p/>
                     <p>
-                    <b>Idiosyncrasy.</b> I am an engineer who is passionate about fashion history and vintage clothes. In my spare time I enjoy arranging flowers. I like working with people who defy conventional expectations.
+                    <b>Idiosyncrasy.</b> I am an engineer who is passionate about fashion history and vintage clothes. In my spare time I enjoy arranging flowers and photographing them. I like working with people who defy conventional expectations.
                     <p/>
                     <p>
                     <b><a href="https://en.wikipedia.org/wiki/Openness_to_experience">Openness</a>.</b> I am a lifelong learner and <a href="{{ "/favorite-books.html" | prepend: site.baseurl }}">avid reader</a>. I enjoy traveling and have lived in multiple countries.
                     <p/>
                     <p>
-                    <b>Other focus.</b> <a href="/the-name-minor.html" | prepend: site.baseurl }}">I come from a family of doctors, teachers, and social workers.</a> We are people who help other people by teaching and healing. I’ve maintained the same ideals and focus in my work as an engineer.
+                    <b>Other focus.</b> <a href="/the-name-minor.html" | prepend: site.baseurl }}">I come from a family of doctors, teachers, and social workers.</a> We are people who help other people by teaching and healing. I've maintained the same ideals and focus in my work as an engineer.
                     <p/>
                 </div>
             </div>
