tweak index text

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ title: Home
         <div class="col-md-6 col-xs-12">
             <div class="card pt-4">
                 <h4 class="card-title text-center">What I value</h4>
-                <h6 class="card-subtitle text-center">in my professional life, and the people I work with</h6>
+                <h6 class="card-subtitle text-center">in my professional life, and in the people I work with</h6>
                 <div class="card-body">
                     <p>
                     <b>Communication.</b> The ability to communicate well – with words, images, dress, body language, and other means – is essential to success as a technologist. Code is a medium, too: "Programs must be written for people to read, and only incidentally for machines to execute." (Abelson)
