remove card borders

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ title: Home
                     </div>
                 </div>
                 <div class="row mt-4">
-                    <div class="card col-12 pt-2">
+                    <div class="border-0 card col-12 pt-2">
                         <div class="card-body px-0">
                         <p>
                             I am a senior software and solutions engineer and technical lead.
@@ -53,7 +53,7 @@ title: Home
             <img src="{{ "/img/mg4-mg5.jpg" | prepend: site.baseurl }}" style="max-width: 100%" />
         </div>
         <div class="col-md-6 col-xs-12">
-            <div class="card h-100 pt-4">
+            <div class="border-0 card h-100 pt-4">
                 <h4 class="card-title text-center">What I do</h4>
                 <div class="card-body">
                     <p>
@@ -76,7 +76,7 @@ title: Home
     <div class="row my-4">&nbsp;</div>
     <div class="row my-4">
         <div class="col-md-6 col-xs-12">
-            <div class="card pt-4">
+            <div class="border-0 card pt-4">
                 <h4 class="card-title text-center">What I value</h4>
                 <h6 class="card-subtitle text-center">in my professional life, and in the people I work with</h6>
                 <div class="card-body">
