--- a/index.html
+++ b/index.html
@@ -107,8 +107,11 @@ title: Home
                 </div>
             </div>
         </div>
-        <div class="col-md-6 col-xs-12 text-center">
-            <img src="{{ "/img/tulip.webp" | prepend: site.baseurl }}" style="max-height: 600px; max-width: 100%" />
+        <div class="col-md-6 col-xs-12 d-flex flex-column justify-content-center text-center">
+            <figure>
+                <img src="{{ "/img/tulip.png" | prepend: site.baseurl }}" style="max-height: 600px; max-width: 100%" />
+                <figcaption class="mt-4">Painting by <a href="https://en.wikipedia.org/wiki/Pierre-Joseph_Redout%C3%A9">Pierre-Joseph Redouté</a></figcaption>
+            </figure>
         </div>
     </div>
 </div>
