--- a/index.html
+++ b/index.html
@@ -20,14 +20,10 @@ title: Home
                     <div class="border-0 card col-12 pt-2">
                         <div class="card-body px-0">
                         <p>
-                            I am a senior software and solutions engineer and technical lead.
+                            Since earning my PhD in computer science I've worked as a software and solutions engineer and technical lead in industrial research, SMBs, freelancing, professional services firms, and academia. I have contributed to multiple early-stage startups and co-founded three of my own, one of which was acquired in 2022. I’ve been programming computers for three decades, from BBS doors to compilers and parallel file systems.
                         </p>
                         <p>
-                            Since earning my PhD in computer science I've worked in industrial research, SMBs,
-                            freelancing, professional services firms, and academia. I have contributed to multiple
-                            early-stage startups and co-founded three of my own, one of which was acquired in 2022. I've
-                            been programming computers for three decades, from BBS doors to compilers and parallel file
-                            systems.
+                            In my spare time I like to learn new technologies and technical skills and use them to improve access to our cultural heritage online. I am passionate about history in general and the history of fashion in particular.
                         </p>
                         </div>
                     </div>
