add knowledge-graph-curator project

--- a/projects.html
+++ b/projects.html
@@ -22,5 +22,12 @@ title: Projects
             subtitle="Visual workflow for cataloging cultural heritage objects, in collaboration with <a href=\"https://www.ardenkirkland.com\">Arden Kirkland</a>"
             title="DressDiscover"
         %}
+        {% include project-card.html
+        class="ms-4"
+        href="https://github.com/minorg/knowledge-graph-curator"
+        img_src="/img/knowledge-graph-curator.png"
+        subtitle="Chrome web extension for curating RDF knowledge graph statements from Wikidata and Wikimedia Commons"
+        title="Knowledge graph curator"
+        %}
     </div>
 </div>
