customizing Bootstrap further

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@ title: Home
                         </div>
                     </div>
                 </div>
-                <div class="row mt-4">
+                <div class="row">
                     <div class="col-12 text-center">
-                        <a class="btn btn-lg btn-primary" href="{{ "/contact.html" | prepend: site.baseurl }}">Contact me</a>
+                        <a class="btn btn-cta btn-primary" href="{{ "/contact.html" | prepend: site.baseurl }}">Contact me</a>
                     </div>
                 </div>
             </div>
