--- a/projects.html
+++ b/projects.html
@@ -10,20 +10,21 @@ title: Projects
     </div>
     <div class="row">
         {% include project-card.html
+            class="me-4"
             href="https://github.com/minorg/awesome-generalist-software-engineer"
             img_src="/img/awesome-generalist-software-engineer.png"
             subtitle="A curated list of resources for generalist software engineers"
             title="awesome-generalist-software-engineer"
         %}
         {% include project-card.html
-            class="ms-4"
+            class="me-4"
             href="https://www.ardenkirkland.com/work/portfolio/dressdiscover/"
             img_src="/img/dressdiscover.png"
             subtitle="Visual workflow for cataloging cultural heritage objects, in collaboration with <a href=\"https://www.ardenkirkland.com\">Arden Kirkland</a>"
             title="DressDiscover"
         %}
         {% include project-card.html
-        class="ms-4"
+        class="me-4"
         href="https://github.com/minorg/knowledge-graph-curator"
         img_src="/img/knowledge-graph-curator.png"
         subtitle="Chrome web extension for curating RDF knowledge graph statements from Wikidata and Wikimedia Commons"
