vertically center images

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ title: Home
                 </div>
             </div>
         </div>
-        <div class="col-md-6 col-xs-12 text-center">
+        <div class="col-md-6 col-xs-12 d-flex flex-column justify-content-center text-center">
             <figure>
                 <img src="{{ "/img/mg4-jfg.jpg" | prepend: site.baseurl }}" style="max-width: 100%" />
                 <figcaption class="mt-2 text-secondary">With my wife <a href="https://jfgordon.net">Dr. Jennifer Farley Gordon</a></figcaption>
@@ -45,7 +45,7 @@ title: Home
     <div class="row my-4">&nbsp;</div>
     <div class="row my-4">&nbsp;</div>
     <div class="row my-4">
-        <div class="col-md-6 col-xs-12 text-center">
+        <div class="col-md-6 col-xs-12 d-flex flex-column justify-content-center text-center">
             <img src="{{ "/img/mg4-mg5.jpg" | prepend: site.baseurl }}" style="max-width: 100%" />
         </div>
         <div class="col-md-6 col-xs-12">
