two column layout on desktop only

--- a/the-name-minor.html
+++ b/the-name-minor.html
@@ -9,8 +9,8 @@ title: The name "Minor"
         </div>
     </div>
     <div class="row my-4">
-        <div class="col-md-3">&nbsp;</div>
-        <div class="d-flex justify-content-center flex-column col-md-3 col-xs-12">
+        <div class="col-xl-3">&nbsp;</div>
+        <div class="d-flex justify-content-center flex-column col-xl-3 col-xs-12">
             My father, Dr. Minor W. Gordon, was a clinical psychologist in Claremore, Oklahoma, where I grew up.
         </div>
         <div class="col-6">
@@ -18,17 +18,17 @@ title: The name "Minor"
         </div>
     </div>
     <div class="row my-4">
-        <div class="col-md-6 col-xs-12">
+        <div class="col-xl-6 col-xs-12">
             <img src="{{ "/img/mg2.jpg" | prepend: site.baseurl }}" style="max-height: 600px; max-width: 600px" />
         </div>
-        <div class="d-flex justify-content-center flex-column col-md-3 col-xs-12">
+        <div class="d-flex justify-content-center flex-column col-xl-3 col-xs-12">
             My grandfather, Dr. Minor E. Gordon, was a medical doctor in Claremore.
         </div>
-        <div class="col-md-3">&nbsp;</div>
+        <div class="col-xl-3">&nbsp;</div>
     </div>
     <div class="row my-4">
-        <div class="col-md-3">&nbsp;</div>
-        <div class="d-flex justify-content-center flex-column col-md-3 col-xs-12">
+        <div class="col-xl-3">&nbsp;</div>
+        <div class="d-flex justify-content-center flex-column col-xl-3 col-xs-12">
             As was his father, Dr. Minor H. Gordon.
         </div>
         <div class="col-6">
