--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Home
 ---
 <div class="container-fluid">
     <div class="row mb-4">
-        <div class="col-md-6 col-xs-12">
+        <div class="col-xl-6 col-xs-12">
             <div class="container-fluid">
                 <div class="row mb-4">
                     <div class="col-12">
@@ -35,7 +35,7 @@ title: Home
                 </div>
             </div>
         </div>
-        <div class="col-md-6 col-xs-12 d-flex flex-column justify-content-center text-center">
+        <div class="col-xl-6 col-xs-12 d-flex flex-column justify-content-center text-center">
             <figure>
                 <img src="{{ "/img/mg4-jfg.jpg" | prepend: site.baseurl }}" style="max-width: 100%" />
                 <figcaption class="mt-2 text-secondary">With my wife <a href="https://jfgordon.net">Dr. Jennifer Farley Gordon</a></figcaption>
@@ -45,10 +45,10 @@ title: Home
     <div class="row my-4">&nbsp;</div>
     <div class="row my-4">&nbsp;</div>
     <div class="row my-4">
-        <div class="col-md-6 col-xs-12 d-flex flex-column justify-content-center text-center">
+        <div class="col-xl-6 col-xs-12 d-flex flex-column justify-content-center text-center">
             <img src="{{ "/img/mg4-mg5.jpg" | prepend: site.baseurl }}" style="max-width: 100%" />
         </div>
-        <div class="col-md-6 col-xs-12">
+        <div class="col-xl-6 col-xs-12">
             <div class="border-0 card h-100 pt-4">
                 <h4 class="card-title text-center">What I do</h4>
                 <div class="card-body">
@@ -71,7 +71,7 @@ title: Home
     <div class="row my-4">&nbsp;</div>
     <div class="row my-4">&nbsp;</div>
     <div class="row my-4">
-        <div class="col-md-6 col-xs-12">
+        <div class="col-xl-6 col-xs-12">
             <div class="border-0 card pt-4">
                 <h4 class="card-title text-center">What I value</h4>
                 <h6 class="card-subtitle text-center">in my professional life, and in the people I work with</h6>
@@ -103,7 +103,7 @@ title: Home
                 </div>
             </div>
         </div>
-        <div class="col-md-6 col-xs-12 d-flex flex-column justify-content-center text-center">
+        <div class="col-xl-6 col-xs-12 d-flex flex-column justify-content-center text-center">
             <figure>
                 <img src="{{ "/img/tulip.png" | prepend: site.baseurl }}" style="max-height: 600px; max-width: 100%" />
                 <figcaption class="mt-4">Painting by <a href="https://en.wikipedia.org/wiki/Pierre-Joseph_Redout%C3%A9">Pierre-Joseph Redouté</a></figcaption>
