generalist software engineer -> compleat developer

--- a/projects.html
+++ b/projects.html
@@ -11,10 +11,10 @@ title: Projects
     <div class="row">
         {% include project-card.html
             class="me-4"
-            href="https://github.com/minorg/awesome-generalist-software-engineer"
-            img_src="/img/awesome-generalist-software-engineer.png"
+            href="https://github.com/minorg/compleat-developer"
+            img_src="/img/compleat-developer.png"
             subtitle="A curated list of resources for generalist software engineers"
-            title="awesome-generalist-software-engineer"
+            title="The Compleat Developer"
         %}
         {% include project-card.html
             class="me-4"
