add Paradicms to projects

--- a/projects.html
+++ b/projects.html
@@ -30,5 +30,12 @@ title: Projects
         subtitle="Chrome web extension for curating RDF knowledge graph statements from Wikidata and Wikimedia Commons"
         title="Knowledge graph curator"
         %}
+        {% include project-card.html
+        class="me-4"
+        href="https://paradicms.org"
+        img_src="/img/paradicms.png"
+        subtitle="Linked Data-powered Collections Management System for archives, libraries, museums, and individuals"
+        title="Paradicms"
+        %}
     </div>
 </div>
