--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@ title: Contact
 <div class="container-fluid">
     <div class="row mb-4">
         <div class="col-12">
-            <h2>Contact me</h2>
+            <h4 class="text-center">Contact</h4>
         </div>
     </div>
     <div class="row">
