--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ title: Home
         </div>
         <div class="col-xl-6 col-xs-12 d-flex flex-column justify-content-center text-center">
             <figure>
-                <img src="{{ "/img/mg4-jfg.jpg" | prepend: site.baseurl }}" style="max-width: 100%" />
+                <img src="{{ "/images/mg4-jfg.jpg" | prepend: site.baseurl }}" style="max-width: 100%" />
                 <figcaption class="mt-2 text-secondary">With my wife <a href="https://jfgordon.net">Dr. Jennifer Farley Gordon</a></figcaption>
             </figure>
         </div>
@@ -46,7 +46,7 @@ title: Home
     <div class="row my-4">&nbsp;</div>
     <div class="row my-4">
         <div class="col-xl-6 col-xs-12 d-flex flex-column justify-content-center text-center">
-            <img src="{{ "/img/mg4-mg5.jpg" | prepend: site.baseurl }}" style="max-width: 100%" />
+            <img src="{{ "/images/mg4-mg5.jpg" | prepend: site.baseurl }}" style="max-width: 100%" />
         </div>
         <div class="col-xl-6 col-xs-12">
             <div class="border-0 card h-100 pt-4">
@@ -105,7 +105,7 @@ title: Home
         </div>
         <div class="col-xl-6 col-xs-12 d-flex flex-column justify-content-center text-center">
             <figure>
-                <img src="{{ "/img/tulip.png" | prepend: site.baseurl }}" style="max-height: 600px; max-width: 100%" />
+                <img src="{{ "/images/tulip.png" | prepend: site.baseurl }}" style="max-height: 600px; max-width: 100%" />
                 <figcaption class="mt-4">Painting by <a href="https://en.wikipedia.org/wiki/Pierre-Joseph_Redout%C3%A9">Pierre-Joseph Redouté</a></figcaption>
             </figure>
         </div>
