--- a/projects.html
+++ b/projects.html
@@ -12,28 +12,28 @@ title: Projects
         {% include project-card.html
             class="me-4"
             href="https://github.com/minorg/compleat-developer"
-            img_src="/img/compleat-developer.png"
+            img_src="/images/compleat-developer.png"
             subtitle="A curated list of resources for generalist software engineers"
             title="The Compleat Developer"
         %}
         {% include project-card.html
             class="me-4"
             href="https://www.ardenkirkland.com/work/portfolio/dressdiscover/"
-            img_src="/img/dressdiscover.png"
+            img_src="/images/dressdiscover.png"
             subtitle="Visual workflow for cataloging cultural heritage objects, in collaboration with <a href=\"https://www.ardenkirkland.com\">Arden Kirkland</a>"
             title="DressDiscover"
         %}
         {% include project-card.html
         class="me-4"
         href="https://github.com/minorg/knowledge-graph-curator"
-        img_src="/img/knowledge-graph-curator.png"
+        img_src="/images/knowledge-graph-curator.png"
         subtitle="Chrome web extension for curating RDF knowledge graph statements from Wikidata and Wikimedia Commons"
         title="Knowledge graph curator"
         %}
         {% include project-card.html
         class="me-4"
         href="https://paradicms.org"
-        img_src="/img/paradicms.png"
+        img_src="/images/paradicms.png"
         subtitle="Linked Data-powered Collections Management System for archives, libraries, museums, and individuals"
         title="Paradicms"
         %}
