--- a/the-name-minor.html
+++ b/the-name-minor.html
@@ -14,12 +14,12 @@ title: The name "Minor"
             My father, Dr. Minor W. Gordon, was a clinical psychologist in Claremore, Oklahoma, where I grew up.
         </div>
         <div class="col-6">
-            <img src="{{ "/assets/images/mg3.jpg" | prepend: site.baseurl }}" style="max-height: 600px; max-width: 600px" />
+            <img src="{{ "/assets/images/the-name-minor/mg3.jpg" | prepend: site.baseurl }}" style="max-height: 600px; max-width: 600px" />
         </div>
     </div>
     <div class="row my-4">
         <div class="col-xl-6 col-xs-12">
-            <img src="{{ "/assets/images/mg2.jpg" | prepend: site.baseurl }}" style="max-height: 600px; max-width: 600px" />
+            <img src="{{ "/assets/images/the-name-minor/mg2.jpg" | prepend: site.baseurl }}" style="max-height: 600px; max-width: 600px" />
         </div>
         <div class="d-flex justify-content-center flex-column col-xl-3 col-xs-12">
             My grandfather, Dr. Minor E. Gordon, was a medical doctor in Claremore.
@@ -32,7 +32,7 @@ title: The name "Minor"
             As was his father, Dr. Minor H. Gordon.
         </div>
         <div class="col-6">
-            <img src="{{ "/assets/images/mg1.jpg" | prepend: site.baseurl }}" style="max-height: 600px; max-width: 600px" />
+            <img src="{{ "/assets/images/the-name-minor/mg1.jpg" | prepend: site.baseurl }}" style="max-height: 600px; max-width: 600px" />
         </div>
     </div>
 </div>
