link searchsci from projects page

--- a/projects/index.html
+++ b/projects/index.html
@@ -35,7 +35,6 @@ title: Projects
                     title="Knowledge graph curator"
                     %}
                     {% include project-card.html
-                    class="me-4"
                     href="https://paradicms.org"
                     img_src="/assets/images/projects/paradicms.png"
                     subtitle="Linked Data-powered Collections Management System for archives, libraries, museums, and individuals"
@@ -46,6 +45,12 @@ title: Projects
                     <h4 class="text-center"><u>Inactive</u></h4>
                     {% include project-card.html
                     class="me-4"
+                    href="/projects/searchsci.html"
+                    img_src="/assets/images/projects/searchsci/searchsci-landing.png"
+                    subtitle="A web-based research experiment investigating the effects of cognitive bias on our consumption of information online"
+                    title="SearchSci"
+                    %}
+                    {% include project-card.html
                     href="https://github.com/minorg/twks"
                     img_src="/assets/images/projects/twks.png"
                     subtitle="A provenance-aware RDF store"
