add Bildungsroman to projects

--- a/projects/index.html
+++ b/projects/index.html
@@ -15,6 +15,13 @@ title: Projects
                     <h4 class="text-center"><u>Active</u></h4>
                     {% include project-card.html
                         class="me-4"
+                        href="https://bildungsroman.minorgordon.net"
+                        img_src="/assets/images/projects/bildungsroman.jpg"
+                        subtitle="Digital exhibitions on personal themes"
+                        title="Bildungsroman"
+                    %}
+                    {% include project-card.html
+                        class="me-4"
                         href="https://github.com/minorg/compleat-developer"
                         img_src="/assets/images/projects/compleat-developer.png"
                         subtitle="A curated list of resources for generalist software engineers"
