move text around home page

--- a/index.html
+++ b/index.html
@@ -5,33 +5,11 @@ title: Home
 <div class="container-fluid">
     <div class="row mb-4">
         <div class="col-xl-6 col-xs-12">
-            <div class="container-fluid">
-                <div class="row mb-4">
-                    <div class="col-12">
-                        <h1>Minor Gordon</h1>
-                    </div>
-                </div>
-                <div class="row my-4">
-                    <div class="col-12">
-                        <h4>I help people explore the possibilities of software.</h4>
-                    </div>
-                </div>
-                <div class="row mt-4">
-                    <div class="border-0 card col-12 pt-2">
-                        <div class="card-body px-0">
-                        <p>
-                            Since earning my PhD in computer science I've worked as a software and solutions engineer and technical lead in industrial research, SMBs, freelancing, professional services firms, and academia. I have contributed to multiple early-stage startups and co-founded three of my own, one of which was acquired in 2022. I’ve been programming computers for three decades, from BBS doors to compilers and parallel file systems.
-                        </p>
-                        <p>
-                            In my spare time I like to learn new technologies and technical skills and use them to improve access to our cultural heritage online. I am passionate about history in general and the history of fashion in particular.
-                        </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-12 text-center">
-                        <a class="btn btn-cta btn-primary" href="{{ "/contact.html" | prepend: site.baseurl }}">Contact me</a>
-                    </div>
+            <div class="d-flex flex-column h-100 justify-content-between">
+                <h1 class="text-center">Minor Gordon</h1>
+                <h4 class="text-center">I help people explore the possibilities of software.</h4>
+                <div class="d-flex flex-row justify-content-center w-100">
+                    <a class="btn btn-cta btn-primary" href="{{ "/contact.html" | prepend: site.baseurl }}">Contact me</a>
                 </div>
             </div>
         </div>
@@ -53,16 +31,22 @@ title: Home
                 <h4 class="card-title text-center">What I do</h4>
                 <div class="card-body">
                     <p>
-                        <b>Analyze.</b> I enjoy helping people diagnose stubborn technical problems, and can provide thoughtful and succinct analysis in presentations and writing.
+                        <b>Analyze.</b> I can help you diagnose stubborn technical problems, and provide thoughtful and succinct analysis in presentations and writing.
                     </p>
                     <p>
-                        <b>Execute.</b> I'm frequently asked to lead high-risk, high-reward, strategic projects that require rapid prototype implementation in order to get feedback from users. The prototype tends to become the product, so I aim for an appropriate compromise between speed and quality.
+                        <b>Execute.</b> I can help you turn audacious ideas into working software. I'm frequently asked to lead high-risk, high-reward, strategic projects that require rapid prototype implementation in order to get feedback from users. The prototype tends to become the product, so I aim for an appropriate compromise between speed and quality.
                     </p>
                     <p>
-                        <b>Guide.</b> It's fun to be a sounding board for new ideas. I can offer a broad, alternative perspective on both technical and non-technical concerns. I'm able to ask questions in an empathetic way and take my ego out of the equation. When the opportunity arises, I deeply enjoy mentoring people one-on-one, and empowering them to move beyond me.
+                        <b>Guide.</b> I can be a sounding board for you, and offer a broad, alternative perspective on both technical and non-technical concerns. I'm able to ask questions in an empathetic way and take my ego out of the equation. When the opportunity arises, I deeply enjoy mentoring people one-on-one, and empowering them to move beyond me.
                     </p>
                     <p>
-                        <b>Translate.</b> I am eager to understand the needs and concerns of clients and customers, ideally by interacting directly with them. Instead of insisting that users speak the language of software, I learn how they talk about the challenges they face, and how to translate between that language and software requirements.
+                        <b>Translate.</b> I'm eager to understand the needs and concerns of clients and customers, ideally by interacting directly with them. Instead of insisting that users speak the language of software, I learn how they talk about the challenges they face, and how to translate between that language and software requirements.
+                    </p>
+                    <p>
+                        Since earning my PhD in computer science I've worked as a software and solutions engineer and technical lead in industrial research, SMBs, freelancing, professional services firms, and academia. I have contributed to multiple early-stage startups and co-founded three of my own, one of which was acquired in 2022. I’ve been programming computers for three decades, from BBS doors to compilers and parallel file systems.
+                    </p>
+                    <p>
+                        In my spare time I like to learn new technologies and technical skills and use them to improve access to our cultural heritage online. I am passionate about history in general and the history of fashion in particular.
                     </p>
                 </div>
             </div>
