cut down projects

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@ title: Home
                 <h4 class="card-title text-center">What I do</h4>
                 <div class="card-body">
                     <p>
-                        <b>Analyze.</b> I can help you diagnose stubborn technical problems, and provide thoughtful and succinct analysis in presentations and writing.
+                        <b>Analyze.</b> I can help you diagnose stubborn problems, and provide thoughtful and succinct analysis in presentations and writing.
                     </p>
                     <p>
-                        <b>Execute.</b> I can help you turn audacious ideas into working software. I'm frequently asked to lead high-risk, high-reward, strategic projects that require rapid prototype implementation in order to get feedback from users. The prototype tends to become the product, so I aim for an appropriate compromise between speed and quality.
+                        <b>Execute.</b> I can help you turn audacious ideas into working software. I'm frequently asked to lead high-risk, high-reward, strategic projects that require rapid implementation in order to get feedback from users.
                     </p>
                     <p>
                         <b>Guide.</b> I can be a sounding board for you, and offer a broad, alternative perspective on both technical and non-technical concerns. I'm able to ask questions in an empathetic way and take my ego out of the equation. When the opportunity arises, I deeply enjoy mentoring people one-on-one, and empowering them to move beyond me.
@@ -43,10 +43,7 @@ title: Home
                         <b>Translate.</b> I'm eager to understand the needs and concerns of clients and customers, ideally by interacting directly with them. Instead of insisting that users speak the language of software, I learn how they talk about the challenges they face, and how to translate between that language and software requirements.
                     </p>
                     <p>
-                        Since earning my PhD in computer science I've worked as a software and solutions engineer and technical lead in industrial research, SMBs, freelancing, professional services firms, and academia. I have contributed to multiple early-stage startups and co-founded three of my own, one of which was acquired in 2022. I’ve been programming computers for three decades, from BBS doors to compilers and parallel file systems.
-                    </p>
-                    <p>
-                        In my spare time I like to learn new technologies and technical skills and use them to improve access to our cultural heritage online. I am passionate about history in general and the history of fashion in particular.
+                        Since earning my PhD in computer science I've worked in industrial research, small product development companies, professional services firms, and academia. I have contributed to multiple early-stage startups and co-founded three of my own, one of which was acquired in 2022.
                     </p>
                 </div>
             </div>
@@ -76,13 +73,13 @@ title: Home
                     <b>Humility.</b> Throughout my life I've sought out teachers, mentors, and colleagues whose knowledge, skill, and talent were a stark reminder that there is always room for improvement. Whenever I started to feel like a big fish in the pond, I knew it was time to find a bigger pond.
                     <p/>
                     <p>
-                    <b>Idiosyncrasy.</b> I am an engineer who is passionate about fashion history and vintage clothes. In my spare time I enjoy arranging flowers and photographing them. I like working with people who defy conventional expectations.
+                    <b>Idiosyncrasy.</b> I am passionate about fashion history and vintage clothes. In my spare time I enjoy arranging flowers and photographing them. I like working with people who defy conventional expectations.
                     <p/>
                     <p>
                     <b><a href="https://en.wikipedia.org/wiki/Openness_to_experience">Openness</a>.</b> I am a lifelong learner and <a href="{{ "/favorite-books.html" | prepend: site.baseurl }}">avid reader</a>. I enjoy traveling and have lived in multiple countries.
                     <p/>
                     <p>
-                    <b>Other focus.</b> <a href="/the-name-minor.html" | prepend: site.baseurl }}">I come from a family of doctors, teachers, and social workers.</a> We are people who help other people by teaching and healing. I've maintained the same ideals and focus in my work as an engineer.
+                    <b>Other focus.</b> <a href="/the-name-minor.html" | prepend: site.baseurl }}">I come from a family of doctors, teachers, and social workers.</a> We are people who help other people by teaching and healing. I've maintained the same ideals and focus in my work.
                     <p/>
                 </div>
             </div>
