paradicms.org -> paradicms.github.io

--- a/projects/index.html
+++ b/projects/index.html
@@ -21,7 +21,7 @@ title: Projects
                         title="DressDiscover"
                     %}
                     {% include project-card.html
-                    href="https://paradicms.org"
+                    href="https://paradicms.github.io"
                     img_src="/assets/images/projects/paradicms.png"
                     subtitle="Linked Data-powered Collections Management System for archives, libraries, museums, and individuals"
                     title="Paradicms"
