move assets/images/ to img/

--- a/projects/index.html
+++ b/projects/index.html
@@ -16,13 +16,13 @@ title: Projects
                     {% include project-card.html
                         class="me-4"
                         href="https://www.ardenkirkland.com/work/portfolio/dressdiscover/"
-                        img_src="/assets/images/projects/dressdiscover.png"
+                        img_src="/img/projects/dressdiscover.png"
                         subtitle="Visual workflow for cataloging cultural heritage objects, in collaboration with <a href=\"https://www.ardenkirkland.com\">Arden Kirkland</a>"
                         title="DressDiscover"
                     %}
                     {% include project-card.html
                     href="https://paradicms.github.io"
-                    img_src="/assets/images/projects/paradicms.png"
+                    img_src="/img/projects/paradicms.png"
                     subtitle="Linked Data-powered Collections Management System for archives, libraries, museums, and individuals"
                     title="Paradicms"
                     %}
@@ -32,13 +32,13 @@ title: Projects
                     {% include project-card.html
                     class="me-4"
                     href="/projects/searchsci.html"
-                    img_src="/assets/images/projects/searchsci/searchsci-landing.png"
+                    img_src="/img/projects/searchsci/searchsci-landing.png"
                     subtitle="A web-based research experiment investigating the effects of cognitive bias on our consumption of information online"
                     title="SearchSci"
                     %}
                     {% include project-card.html
                     href="https://github.com/minorg/twks"
-                    img_src="/assets/images/projects/twks.png"
+                    img_src="/img/projects/twks.png"
                     subtitle="A provenance-aware RDF store"
                     title="Tetherless World Knowledge Store"
                     %}
