snomed-ct -> snomed-ct-transformation

--- a/projects/index.html
+++ b/projects/index.html
@@ -28,8 +28,8 @@ title: Projects
                     title="Paradicms"
                     %}
                     {% include project-card.html
-                        href="/projects/snomed-ct.html"
-                        img_src="/img/projects/snomed-ct/snomed-ct-53627009.svg"
+                        href="/projects/snomed-ct-transformation.html"
+                        img_src="/img/projects/snomed-ct-transformation/snomed-ct-53627009.svg"
                         title="Transforming SNOMED CT into SKOS and SHACL"
                         %}
                     </div>
