add diveintoschema.org project

--- a/projects/index.html
+++ b/projects/index.html
@@ -14,6 +14,12 @@ title: Projects
                 <div class="row mb-4 mt-4">
                     <h4 class="text-center"><u>Active</u></h4>
                     {% include project-card.html
+                        href="https://diveintoschema.org"
+                        img_src="/img/projects/diveintoschema.org.png"
+                        subtitle="Exploring uses of schema.org types across the web"
+                        title="Dive Into Schema.org"
+                    %}
+                    {% include project-card.html
                         class="me-4"
                         href="https://www.ardenkirkland.com/work/portfolio/dressdiscover/"
                         img_src="/img/projects/dressdiscover.png"
@@ -31,8 +37,8 @@ title: Projects
                         href="/projects/snomed-ct-transformation.html"
                         img_src="/img/projects/snomed-ct-transformation/snomed-ct-53627009.svg"
                         title="Transforming SNOMED CT into SKOS and SHACL"
-                        %}
-                    </div>
+                    %}
+                </div>
                 <div class="row mt-4">
                     <h4 class="text-center"><u>Inactive</u></h4>
                     {% include project-card.html
