--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@ title: Home
 <div class="container-fluid">
     <div class="row mb-4">
         <div class="col-xl-6 col-xs-12">
-            <div class="d-flex flex-column h-100 justify-content-between">
-                <h1 class="text-center">Minor Gordon</h1>
-                <h4 class="text-center">I help people explore the possibilities of software.</h4>
-                <div class="d-flex flex-row justify-content-center w-100">
-                    <a class="btn btn-cta btn-primary" href="{{ "/contact.html" | prepend: site.baseurl }}">Contact me</a>
-                </div>
+            <div class="align-items-center d-flex flex-column h-100 justify-content-center">
+                <h1>Minor Gordon</h1>
+                <h5 class="mb-4">Engineer&nbsp;&middot;&nbsp;Teacher&nbsp;&middot;&nbsp;Writer</h5>
+                <a class="btn btn-cta btn-primary mt-4" href="{{ "/contact.html" | prepend: site.baseurl }}">Contact me</a>
             </div>
         </div>
         <div class="col-xl-6 col-xs-12 d-flex flex-column justify-content-center text-center">
